test/corpus/comment.txt
===
empty
===

##

---

(source
    (comment))

===
single line
===

## This is a comment

---

(source
    (comment))

===
multi line
===

## This is line 1
## This is line 2

---

(source
    (comment))

===
trailing
===

namespace demo; ## This is a trailing comment

---

(source
    (namespace
        name: (ident))
    (comment))
