test/corpus/declaration.txt
===
namespace
===

namespace demo;

---

(source
    (namespace
        name: (ident)))

===
record-0
===

record Model end

---

(source
    (def_record
        name: (ident)))

===
record-1
:error
===

record Model do end

===
record-2
===

record Model do
    name String;
    end

---

(source
    (def_record
        name: (ident)
        body: (fields
                (field
                    name: (ident)
                    type: (ident)))))

===
record-3
===

record Model do
    name String;
    item String;
    end

---

(source
    (def_record
        name: (ident)
        body: (fields
            (field
                name: (ident)
                type: (ident))
            (field
                name: (ident)
                type: (ident)))))

===
record-4
===

record Model do
    items []Item;
    end

---

(source
    (def_record
        name: (ident)
        body: (fields
            (field
                name: (ident)
                type: (slice_lit name: (ident))))))

===
template-0
===

templ m Model end

---

(source
    (def_templ
        var: (ident)
        type: (ident)))

===
template-1
:error
===

templ m Model do end

===
template-2
===

templ m Model do
    [div]
    end

---

(source
    (def_templ
        var: (ident)
        type: (ident)
        (body
            (element tag: (ident)))))

===
template-2
===

templ m Model do
    [div [p]]
    end

---

(source
    (def_templ
        var: (ident)
        type: (ident)
       (body
            (element tag: (ident)
                (children
                    (element tag: (ident)))))))

===
template-3
===

templ m Model do
    [div]
    [div]
    end

---

(source
    (def_templ
        var: (ident)
        type: (ident)
        (body
            (element tag: (ident))
            (element tag: (ident)))))

===
template-4
:error
===

templ m Model do
    text
    end
