test/corpus/documentation.txt
===
namespace
===

# demo
namespace demo;

---

(source
    (namespace
        (documentation
            target: (ident))
        name: (ident)))

===
record
===

# Model
def Model record end

---

(source
    (def_record
        (documentation
            target: (ident))
        name: (ident)))

===
template
===

# template
template m Model do end

---

(source
    (def_template
        (documentation
            target: (ident))
        var: (ident)
        type: (ident)))

===
multi line
===

# demo line 1
# line 2
# line 3
namespace demo;

---

(source
    (namespace
        (documentation
            target: (ident))
        name: (ident)))
