test/corpus/element.txt
===
empty
===

[div]

---

(source (element tag: (ident)))

===
attr-1
===

[div k1=value]

---

(source
    (element
        tag: (ident)
        (attrs (attr
            key: (ident)
            val: (text)))))

===
attr-2
===

[div
    k1=value
    k2=value
    ]

---

(source
    (element
        tag: (ident)
        (attrs
            (attr
                key: (ident)
                val: (text))
            (attr
                key: (ident)
                val: (text)))))

===
keyword
===

[:script]

---

(source (element keyword: (ident)))
