test/corpus/expression.txt
===
ident
===

(foo)

---

(source (expr (ident)))

===
number
===

(100)

---

(source (expr (literal_int)))

===
field
===

(m.foo)

---

(source
    (expr
        (field_access
            object: (ident)
            field: (ident))))
